slash-helper-macros/tests/commands/e03_command_not_implemented.stderr
error[E0573]: expected type, found derive macro `Commands`
 --> tests/commands/e03_command_not_implemented.rs:3:10
  |
3 | #[derive(Commands)]
  |          ^^^^^^^^ not a type
  |
  = note: this error originates in the derive macro `Commands` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait instead
  |
1 | use slash_helper::Commands;
  |

error[E0412]: cannot find type `Context` in this scope
 --> tests/commands/e03_command_not_implemented.rs:3:10
  |
3 | #[derive(Commands)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Commands` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
1 | use core::task::Context;
  |
1 | use serenity::client::Context;
  |
1 | use std::task::Context;
  |

error[E0412]: cannot find type `ApplicationCommandInteraction` in this scope
 --> tests/commands/e03_command_not_implemented.rs:3:10
  |
3 | #[derive(Commands)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Commands` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use serenity::model::prelude::application_command::ApplicationCommandInteraction;
  |

error[E0412]: cannot find type `InvocationError` in this scope
 --> tests/commands/e03_command_not_implemented.rs:3:10
  |
3 | #[derive(Commands)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Commands` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 | use slash_helper::InvocationError;
  |

error[E0277]: the trait bound `u64: slash_helper::Command` is not satisfied
 --> tests/commands/e03_command_not_implemented.rs:3:10
  |
3 | #[derive(Commands)]
  |          ^^^^^^^^ the trait `slash_helper::Command` is not implemented for `u64`
  |
  = note: this error originates in the derive macro `Commands` (in Nightly builds, run with -Z macro-backtrace for more info)
